Bug#10418: LOAD_FILE does not behave like in manual if file does not exist

load_file() string-function should return NULL rather than throw an error if
the file doesn't exist, as per the manual.